# iAMAutoTest

./: CMakeLists.txt  README.md
IntegrationTest/: CMakeLists.txt
IntegrationTest/Canonical/: CMakeLists.txt
IntegrationTest/Canonical/Thermal/: CMakeLists.txt
IntegrationTest/Canonical/Thermal/CreateAndLoad/: CMakeLists.txt
IntegrationTest/Canonical/Thermal/CreateAndLoad/reference/: Ref.qa
IntegrationTest/Canonical/Thermal/CreateAndRun/: CMakeLists.txt
IntegrationTest/Canonical/Thermal/CreateAndRun/reference/: Ref.qa
IntegrationTest/ProjectVMTest/: CMakeLists.txt
UnitTest/: CMakeLists.txt
cmake/Modules/: FindBarracuda.cmake  FindiAM.cmake
compare_results/: CMakeLists.txt
compare_results/TestCases/: CMakeLists.txt
compare_results/TestCases/CompareFourFiles/: CMakeLists.txt  ref_values_check_03.txt  ref_values_check_04.txt  values_check_01.txt  values_check_02.txt
compare_results/TestCases/CompareTwoFiles/: CMakeLists.txt  ref_values_check.txt
compare_results/TestCases/FileCheck/: CMakeLists.txt
compare_results/src/: diffNormOfVectors.cpp
